--- a/.gitattributes
+++ b/.gitattributes
@@ -39,3 +39,10 @@
 *.rns filter=lfs diff=lfs merge=lfs -text
 *.reason filter=lfs diff=lfs merge=lfs -text
 *.lxo filter=lfs diff=lfs merge=lfs -text
+
+# .gitattributes
+
+# Treat them as binary files for GitMerge
+*.unity binary
+*.prefab binary
+*.asset binary
