--- a/.gitattributes
+++ b/.gitattributes
@@ -43,6 +43,6 @@
 # .gitattributes
 
 # Treat them as binary files for GitMerge
-*.unity binary
-*.prefab binary
-*.asset binary
+*.unity filter=lfs diff=lfs merge=lfs -text
+*.prefab filter=lfs diff=lfs merge=lfs -text
+*.asset filter=lfs diff=lfs merge=lfs -text
